TEMP FIX: inlining parts of leaflet.css as a tile alignment quick fix
The deployed version is not finding
`../bower_components/leaflet/dist/leaflet.css` for some reason, which
is making the map tiles fail to tesselate correctly.  Until we figure
out why, pasting in the most important parts of that file to our own
main stylesheet is a quick fix.  THIS SHOULD NOT STAY IN THE CODE!

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -205,3 +205,230 @@ span.popup.heading {
 span.popup.bodytext {
   font-style: italic;
 }
+
+
+
+/* what follows is a temp fix for the leaflet.css bug in deployment. I'm copying in the most important parts of that file as a backup. IT SHOULD BE REMOVED SOON! */
+
+/* required styles */
+
+.leaflet-map-pane,
+.leaflet-tile,
+.leaflet-marker-icon,
+.leaflet-marker-shadow,
+.leaflet-tile-pane,
+.leaflet-tile-container,
+.leaflet-overlay-pane,
+.leaflet-shadow-pane,
+.leaflet-marker-pane,
+.leaflet-popup-pane,
+.leaflet-overlay-pane svg,
+.leaflet-zoom-box,
+.leaflet-image-layer,
+.leaflet-layer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  }
+.leaflet-container {
+  overflow: hidden;
+  -ms-touch-action: none;
+  }
+.leaflet-tile,
+.leaflet-marker-icon,
+.leaflet-marker-shadow {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  -webkit-user-drag: none;
+  }
+.leaflet-marker-icon,
+.leaflet-marker-shadow {
+  display: block;
+  }
+/* map is broken in FF if you have max-width: 100% on tiles */
+.leaflet-container img {
+  max-width: none !important;
+  }
+/* stupid Android 2 doesn't understand "max-width: none" properly */
+.leaflet-container img.leaflet-image-layer {
+  max-width: 15000px !important;
+  }
+.leaflet-tile {
+  filter: inherit;
+  visibility: hidden;
+  }
+.leaflet-tile-loaded {
+  visibility: inherit;
+  }
+.leaflet-zoom-box {
+  width: 0;
+  height: 0;
+  }
+/* workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=888319 */
+.leaflet-overlay-pane svg {
+  -moz-user-select: none;
+  }
+
+.leaflet-tile-pane    { z-index: 2; }
+.leaflet-objects-pane { z-index: 3; }
+.leaflet-overlay-pane { z-index: 4; }
+.leaflet-shadow-pane  { z-index: 5; }
+.leaflet-marker-pane  { z-index: 6; }
+.leaflet-popup-pane   { z-index: 7; }
+
+.leaflet-vml-shape {
+  width: 1px;
+  height: 1px;
+  }
+.lvml {
+  behavior: url(#default#VML);
+  display: inline-block;
+  position: absolute;
+  }
+
+
+/* control positioning */
+
+.leaflet-control {
+  position: relative;
+  z-index: 7;
+  pointer-events: auto;
+  }
+.leaflet-top,
+.leaflet-bottom {
+  position: absolute;
+  z-index: 1000;
+  pointer-events: none;
+  }
+.leaflet-top {
+  top: 0;
+  }
+.leaflet-right {
+  right: 0;
+  }
+.leaflet-bottom {
+  bottom: 0;
+  }
+.leaflet-left {
+  left: 0;
+  }
+.leaflet-control {
+  float: left;
+  clear: both;
+  }
+.leaflet-right .leaflet-control {
+  float: right;
+  }
+.leaflet-top .leaflet-control {
+  margin-top: 10px;
+  }
+.leaflet-bottom .leaflet-control {
+  margin-bottom: 10px;
+  }
+.leaflet-left .leaflet-control {
+  margin-left: 10px;
+  }
+.leaflet-right .leaflet-control {
+  margin-right: 10px;
+  }
+
+
+
+/* general typography */
+.leaflet-container {
+  font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
+  }
+
+
+
+
+
+/* popup */
+
+.leaflet-popup {
+  position: absolute;
+  text-align: center;
+  }
+.leaflet-popup-content-wrapper {
+  padding: 1px;
+  text-align: left;
+  border-radius: 12px;
+  }
+.leaflet-popup-content {
+  margin: 13px 19px;
+  line-height: 1.4;
+  }
+.leaflet-popup-content p {
+  margin: 18px 0;
+  }
+.leaflet-popup-tip-container {
+  margin: 0 auto;
+  width: 40px;
+  height: 20px;
+  position: relative;
+  overflow: hidden;
+  }
+.leaflet-popup-tip {
+  width: 17px;
+  height: 17px;
+  padding: 1px;
+
+  margin: -10px auto 0;
+
+  -webkit-transform: rotate(45deg);
+     -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+       -o-transform: rotate(45deg);
+          transform: rotate(45deg);
+  }
+.leaflet-popup-content-wrapper,
+.leaflet-popup-tip {
+  background: white;
+
+  box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+  }
+.leaflet-container a.leaflet-popup-close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 4px 4px 0 0;
+  text-align: center;
+  width: 18px;
+  height: 14px;
+  font: 16px/14px Tahoma, Verdana, sans-serif;
+  color: #c3c3c3;
+  text-decoration: none;
+  font-weight: bold;
+  background: transparent;
+  }
+.leaflet-container a.leaflet-popup-close-button:hover {
+  color: #999;
+  }
+.leaflet-popup-scrolled {
+  overflow: auto;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  }
+
+.leaflet-oldie .leaflet-popup-content-wrapper {
+  zoom: 1;
+  }
+.leaflet-oldie .leaflet-popup-tip {
+  width: 24px;
+  margin: 0 auto;
+
+  -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678)";
+  filter: progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678);
+  }
+.leaflet-oldie .leaflet-popup-tip-container {
+  margin-top: -1px;
+  }
+
+.leaflet-oldie .leaflet-control-zoom,
+.leaflet-oldie .leaflet-control-layers,
+.leaflet-oldie .leaflet-popup-content-wrapper,
+.leaflet-oldie .leaflet-popup-tip {
+  border: 1px solid #999;
+  }
+
